# WEB_HW11

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: e2f540d91738_init.py
src/conf/: config.py
src/database/: db.py  models.py  schemas.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/services/: auth.py  email.py
