[tool.poetry]
name = "contact-book"
version = "0.1.0"
description = "REST API backend for contacts book"
package-mode = false
authors = ["demagoit <33demagoit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
